# ebay-kleinanzeigen-api

./: .dockerignore  .gitignore  BACKUP.md  Dockerfile  README.MD  docker-compose.yml  main.py  mcp_server.py  pyproject.toml  requirements.txt  serve.py
db/: __init__.py  models.py  session.py
events/: __init__.py  listings.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  types.ts
frontend/app/components/: SchedulerJobsView.tsx  SearchForm.tsx  SearchResults.tsx  StoredListingsView.tsx
repositories/: __init__.py  image_fingerprints.py  listings.py  scheduler.py
routers/: inserat.py  inserate.py  inserate_detailed.py  inserate_detailed_ultra.py  metrics.py  scheduler.py  stored_listings.py
schemas/: __init__.py  listings.py  scheduler.py
scrapers/: inserat.py  inserate.py  inserate_ultra_optimized.py
services/: event_bus.py  image_analysis.py  kleinanzeigen.py  kleinanzeigen.py.backup  scheduler.py
tests/: test_image_analysis_service.py  test_listing_repository.py  test_location_filter.py
utils/: browser.py  location_filter.py
